crates/action/tests/probes/derive_resource_on_wrong_type.stderr
error: field with `#[resource]` must have type `ResourceGuard<T>` (optionally wrapped in `Option<...>` and/or `Lazy<...>`) — got: String
  --> tests/probes/derive_resource_on_wrong_type.rs:16:18
   |
16 |     not_a_guard: String,
   |                  ^^^^^^
